# bhulan

./: .gitignore  EFFICIENCY_REPORT.md  INGESTION_README.md  LICENSE  README.md  SMOOTHING_README.md  classes.py  computed.py  constants.py  create_static_map.py  importChileTrucks.py  import_chile.py  init.py  inputOutput.py  mongo.py  processStops.py  processVehicles.py  pyproject.toml  setup.py  stopStats.py  util.py  writeFiles.py
bhulan/api/: app.py
bhulan/config/: settings.py
bhulan/core/: logging.py  smoothing.py
bhulan/ingestion/: files.py  kafka_consumer.py  mqtt_consumer.py  normalize.py  validate.py
bhulan/models/: canonical.py
bhulan/storage/: base.py  mongo_repo.py
sampledata/: ~$reporte_trayecto_01-09-2014.xlsx
tests/: __init__.py  conftest.py  test_imports_py3.py  test_util.py
tests/data/: golden_rural.csv  golden_urban.csv  jitter_spikes.csv  sparse.json
tests/integration/: __init__.py  test_end_to_end.py  test_file_ingestion.py  test_mongodb_storage.py  test_smoothing_integration.py  test_webhook_api.py
tests/system/: fake_db.py  test_helpers.py  test_metrics.py  test_smoothing_system.py  test_stop_detection.py
tests/unit/: __init__.py  test_normalize.py  test_smoothing.py  test_validation.py
